<resources>
    <string name="app_name">SimpleWeatherApp</string>
    <string name="welcome">WELCOME</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="temp">Temp</string>
    <string name="tempmin">Temp Min</string>
    <string name="tempmax">Temp Max</string>
    <string name="iconstring">&#xf00d;</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="description">description</string>
    <string name="days">Day</string>
    <string name="wind">wind</string>

    <string name="updatedon">Updated on:</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Pressure">"Pressure: "</string>
    <string name="windspeed">"WindSpeed: "</string>
    <string name="line_sep">"line.separator"</string>
    <string name="humiditylabel">"Humidity: "</string>
    <string name="max">"Max: "</string>
    <string name="min">"Min: "</string>
    <string name="today">TODAY</string>

</resources>
