<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorlayout"
    android:orientation="vertical"
    tools:context="com.example.us285899.Simpleweatherapp.ui.MainWeatherActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/colorlayout">


    <TextView
        android:id="@+id/cityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/city"
        android:textSize="@dimen/bigtext"
        />
        <TextView
            android:id="@+id/dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cityView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/date"
            android:textSize="@dimen/smalltext" />

        <TextView
            android:id="@+id/descView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/description"
            />

        <TextView
            android:id="@+id/tempMinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/descView"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/tempmin"
            />

        <TextView
            android:id="@+id/presView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tempMinView"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/pressure"
            />
        <TextView
            android:id="@+id/tempMaxView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/descView"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/tempmax"
            />

        <TextView
            android:id="@+id/tempView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/temp"
            android:textSize="@dimen/bigtext" />

    <TextView
        android:id="@+id/humView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tempMaxView"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/textview_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/windView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/presView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/wind"
 />

        <ImageView
            android:id="@+id/iconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/art_rain" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
                android:id="@+id/todayView"
            android:layout_width="0dp"
                android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/black_overlay"
            android:text="@string/days"
                android:textAlignment="center"
                android:textSize="@dimen/smalltext"
                />
            <TextView
                android:id="@+id/day2View"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@color/black_overlay"
                android:text="@string/days"
                android:textAlignment="center"
                android:textSize="@dimen/smalltext" />

        <TextView
            android:id="@+id/day3View"
                android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@color/black_overlay"
            android:text="@string/days"
            android:textAlignment="center"
            android:textSize="@dimen/smalltext"
                />
            <TextView
                android:id="@+id/day4View"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@color/black_overlay"
                android:text="@string/days"
                android:textAlignment="center"
                android:textSize="@dimen/smalltext"
                />
            <TextView
                android:id="@+id/day5View"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@color/black_overlay"
                android:text="@string/days"
                android:textAlignment="center"
                android:textSize="@dimen/smalltext"
                />
    </LinearLayout>
</LinearLayout>
